Properly sets the slope of the image
According to the nifti spec, when the slope is 0 in the file, that means that that field is non-use.
In that case, we default to the slope of 1.

--- a/examples/index.html
+++ b/examples/index.html
@@ -139,6 +139,9 @@
         console.log(image);
         const stack = {
           currentImageIdIndex: 0,
+          // 91: this is hardcoded because the image loader still has to expose
+          //     the nifti metadata. 91 is the number of slices of the default
+          //     sample .nii file
           imageIds: Array.from(Array(91), (_, i) => `${imageId}#${i}`)
         }
         const viewport = cornerstone.getDefaultViewportForImage(element, image);
