Identifies and uses the proper typed array for different data types
Instead of always using a Uint8Array, now we pick the best typed array. Though for 64bit pixel data we're just throwing an exception.

For float pixel data (32 or 64), still need to check how to convert the float data to integer - it seems cornerstone requires it.

--- a/examples/index.html
+++ b/examples/index.html
@@ -62,6 +62,7 @@
               <datalist id="sample-nifti-files">
                 <option value="data/avg152T1_LR_nifti.nii">data/avg152T1_LR_nifti.nii (uncompressed, 903 KB)</option>
                 <option value="data/sample_image.nii.gz">data/sample_image.nii.gz (compressed, 1,5 MB)</option>
+                <option value="data/fMRI_Ret_bars.nii.gz">data/fMRI_Ret_bars.nii.gz (compressed, 3,0 MB)</option>
               </datalist>
             </div>
             <div class="col-sm-3">
