Accepts float pixel data + determines correct display window values

--- a/examples/index.html
+++ b/examples/index.html
@@ -58,11 +58,14 @@
           <div class="form-group form-row">
             <label class="col-form-label col-sm-1" for="nifti-URL">URL</label>
             <div class="col-sm-7">
-              <input class="form-control" type="text" id="nifti-URL" placeholder="Enter NIFTI URL" value="data/avg152T1_LR_nifti.nii" list="sample-nifti-files">
+              <input class="form-control" type="text" id="nifti-URL" placeholder="Enter URL to NIFTI file or pick from list" list="sample-nifti-files">
               <datalist id="sample-nifti-files">
                 <option value="data/avg152T1_LR_nifti.nii">data/avg152T1_LR_nifti.nii (uncompressed, 903 KB)</option>
-                <option value="data/sample_image.nii.gz">data/sample_image.nii.gz (compressed, 1,5 MB)</option>
-                <option value="data/fMRI_Ret_bars.nii.gz">data/fMRI_Ret_bars.nii.gz (compressed, 3,0 MB)</option>
+                <option value="data/sample_image.nii.gz">data/sample_image.nii.gz (compressed, 1.5 MB)</option>
+                <option value="data/fMRI_Ret_bars.nii.gz">data/fMRI_Ret_bars.nii.gz (compressed, 3.0 MB)</option>
+                <option value="data/dti_FA.nii.gz">data/dti_FA.nii.gz (compressed, 395.6 KB)</option>
+                <option value="data/dti_V1.nii.gz">data/dti_V1.nii.gz (compressed, 1.2 MB)</option>
+                <option value="data/mni152_2009_256.nii.gz">data/mni152_2009_256.nii.gz (compressed, 4.5 MB)</option>
               </datalist>
             </div>
             <div class="col-sm-3">
