Allows more general imageId format: nifti://file#dimension-slice + tests
Valid formats:
- nifti://brain.nii
- nifti://brain.nii#5
- nifti://brain.nii#x-5
- nifti://brain.nii#y

--- a/examples/index.html
+++ b/examples/index.html
@@ -217,8 +217,8 @@
   function downloadAndView() {
     let url = document.getElementById('nifti-URL').value;
 
-    // prefix the url with nifti: so cornerstone can find the image loader
-    loadAndViewImage(`nifti:${url}`);
+    // prefix the url with nifti:// so cornerstone can find the image loader
+    loadAndViewImage(`nifti://${url}`);
   }
 
   cornerstone.events.addEventListener('cornerstoneimageloadprogress', function(event) {
