--- a/examples/index.html
+++ b/examples/index.html
@@ -48,7 +48,6 @@
         Looking for a CORS proxy?  Try <a href="https://www.npmjs.com/package/corsproxy">CORSProxy</a>
       </p>
       <strong>Use of this example require IE10+ or any other modern browser.</strong>
-      <hr>
     </div>
     <div id="load-progress">Image Load Progress:</div>
 
@@ -58,15 +57,20 @@
           <div class="form-group form-row">
             <label class="col-form-label col-sm-1" for="nifti-URL">URL</label>
             <div class="col-sm-7">
-              <input class="form-control" type="text" id="nifti-URL" placeholder="Enter URL to NIFTI file or pick from list" list="sample-nifti-files">
-              <datalist id="sample-nifti-files">
-                <option value="data/avg152T1_LR_nifti.nii">data/avg152T1_LR_nifti.nii (uncompressed, 903 KB)</option>
-                <option value="data/sample_image.nii.gz">data/sample_image.nii.gz (compressed, 1.5 MB)</option>
-                <option value="data/fMRI_Ret_bars.nii.gz">data/fMRI_Ret_bars.nii.gz (compressed, 3.0 MB)</option>
-                <option value="data/dti_FA.nii.gz">data/dti_FA.nii.gz (compressed, 395.6 KB)</option>
-                <option value="data/dti_V1.nii.gz">data/dti_V1.nii.gz (compressed, 1.2 MB)</option>
-                <option value="data/mni152_2009_256.nii.gz">data/mni152_2009_256.nii.gz (compressed, 4.5 MB)</option>
-              </datalist>
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <div class="input-group-text">nifti://</div>
+                </div>
+                <input class="form-control" type="text" id="nifti-URL" placeholder="Enter URL to NIFTI file or pick from list" list="sample-nifti-files">
+                <datalist id="sample-nifti-files">
+                  <option value="data/avg152T1_LR_nifti.nii">data/avg152T1_LR_nifti.nii (uncompressed, 903 KB)</option>
+                  <option value="data/sample_image.nii.gz">data/sample_image.nii.gz (compressed, 1.5 MB)</option>
+                  <option value="data/fMRI_Ret_bars.nii.gz">data/fMRI_Ret_bars.nii.gz (compressed, 3.0 MB)</option>
+                  <option value="data/dti_FA.nii.gz">data/dti_FA.nii.gz (compressed, 395.6 KB)</option>
+                  <option value="data/dti_V1.nii.gz">data/dti_V1.nii.gz (compressed, 1.2 MB)</option>
+                  <option value="data/mni152_2009_256.nii.gz">data/mni152_2009_256.nii.gz (compressed, 4.5 MB)</option>
+                </datalist>
+              </div>
             </div>
             <div class="col-sm-3">
               <button class="btn btn-primary" type="button" id="download-and-view">Download and View</button>
@@ -89,30 +93,78 @@
         <div id="nifti-image"></div>
       </div>
       <div id="nifti-image-data">
-        <span>Transfer Syntax: </span><span id="transferSyntax"></span><br>
-        <span>SOP Class: </span><span id="sopClass"></span><br>
-        <span>Samples Per Pixel: </span><span id="samplesPerPixel"></span><br>
-        <span>Photometric Interpretation: </span><span id="photometricInterpretation"></span><br>
-        <span>Number Of Frames: </span><span id="numberOfFrames"></span><br>
-        <span>Planar Configuration: </span><span id="planarConfiguration"></span><br>
-        <span>Rows: </span><span id="rows"></span><br>
-        <span>Columns: </span><span id="columns"></span><br>
-        <span>Pixel Spacing: </span><span id="pixelSpacing"></span><br>
-        <span>Bits Allocated: </span><span id="bitsAllocated"></span><br>
-        <span>Bits Stored: </span><span id="bitsStored"></span><br>
-        <span>High Bit: </span><span id="highBit"></span><br>
-        <span>Pixel Representation: </span><span id="pixelRepresentation"></span><br>
-        <span>WindowCenter: </span><span id="windowCenter"></span><br>
-        <span>WindowWidth: </span><span id="windowWidth"></span><br>
-        <span>RescaleIntercept: </span><span id="rescaleIntercept"></span><br>
-        <span>RescaleSlope: </span><span id="rescaleSlope"></span><br>
-        <span>Basic Offset Table Entries: </span><span id="basicOffsetTable"></span><br>
-        <span>Fragments: </span><span id="fragments"></span><br>
-        <span>Max Stored Pixel Value: </span><span id="minStoredPixelValue"></span><br>
-        <span>Min Stored Pixel Value: </span><span id="maxStoredPixelValue"></span><br>
-        <span>Total Time: </span><span id="totalTime"></span><br>
-        <span>Load Time: </span><span id="loadTime"></span><br>
-        <span>Decode Time: </span><span id="decodeTime"></span><br>
+        <div class="metadata">
+          <span class="badge badge-pill badge-light">Samples per Pixel:</span>
+          <span class="badge badge-pill badge-primary"  id="samplesPerPixel"></span>
+        </div>
+        <div class="metadata">
+          <span class="badge badge-pill badge-light">Photometric Interpretation:</span>
+          <span class="badge badge-pill badge-primary"  id="photometricInterpretation"></span>
+        </div>
+        <div class="metadata">
+          <span class="badge badge-pill badge-light">Number of Frames:</span>
+          <span class="badge badge-pill badge-primary"  id="numberOfFrames"></span>
+        </div>
+        <div class="metadata">
+          <span class="badge badge-pill badge-light">Planar Configuration:</span>
+          <span class="badge badge-pill badge-primary"  id="planarConfiguration"></span>
+        </div>
+        <div class="metadata">
+          <span class="badge badge-pill badge-light">Rows:</span>
+          <span class="badge badge-pill badge-primary"  id="rows"></span>
+        </div>
+        <div class="metadata">
+          <span class="badge badge-pill badge-light">Columns:</span>
+          <span class="badge badge-pill badge-primary"  id="columns"></span>
+        </div>
+        <div class="metadata">
+          <span class="badge badge-pill badge-light">Pixel Aspect Ratio:</span>
+          <span class="badge badge-pill badge-primary"  id="pixelAspectRatio"></span>
+        </div>
+        <div class="metadata">
+          <span class="badge badge-pill badge-light">Bits Allocated:</span>
+          <span class="badge badge-pill badge-primary"  id="bitsAllocated"></span>
+        </div>
+        <div class="metadata">
+          <span class="badge badge-pill badge-light">Bits Stored:</span>
+          <span class="badge badge-pill badge-primary"  id="bitsStored"></span>
+        </div>
+        <div class="metadata">
+          <span class="badge badge-pill badge-light">High Bit:</span>
+          <span class="badge badge-pill badge-primary"  id="highBit"></span>
+        </div>
+        <div class="metadata">
+          <span class="badge badge-pill badge-light">Pixel Representation:</span>
+          <span class="badge badge-pill badge-primary"  id="pixelRepresentation"></span>
+        </div>
+        <div class="metadata">
+          <span class="badge badge-pill badge-light">WindowCenter:</span>
+          <span class="badge badge-pill badge-primary"  id="windowCenter"></span>
+        </div>
+        <div class="metadata">
+          <span class="badge badge-pill badge-light">WindowWidth:</span>
+          <span class="badge badge-pill badge-primary"  id="windowWidth"></span>
+        </div>
+        <div class="metadata">
+          <span class="badge badge-pill badge-light">RescaleIntercept:</span>
+          <span class="badge badge-pill badge-primary"  id="rescaleIntercept"></span>
+        </div>
+        <div class="metadata">
+          <span class="badge badge-pill badge-light">RescaleSlope:</span>
+          <span class="badge badge-pill badge-primary"  id="rescaleSlope"></span>
+        </div>
+        <div class="metadata">
+          <span class="badge badge-pill badge-light">Max Stored Pixel Value:</span>
+          <span class="badge badge-pill badge-primary"  id="minStoredPixelValue"></span>
+        </div>
+        <div class="metadata">
+          <span class="badge badge-pill badge-light">Min Stored Pixel Value:</span>
+          <span class="badge badge-pill badge-primary"  id="maxStoredPixelValue"></span>
+        </div>
+        <div class="metadata">
+          <span class="badge badge-pill badge-light">Total Time:</span>
+          <span class="badge badge-pill badge-primary"  id="totalTime"></span>
+        </div>
       </div>
     </section>
   </div>
@@ -138,12 +190,10 @@
       const start = new Date().getTime();
       cornerstone.loadAndCacheImage(imageId).then(function(image) {
         console.log(image);
+        const numberOfSlices = cornerstone.metaData.get('multiFrameModule', imageId).numberOfFrames;
         const stack = {
           currentImageIdIndex: 0,
-          // 91: this is hardcoded because the image loader still has to expose
-          //     the nifti metadata. 91 is the number of slices of the default
-          //     sample .nii file
-          imageIds: Array.from(Array(91), (_, i) => `${imageId}#${i}`)
+          imageIds: Array.from(Array(numberOfSlices), (_, i) => `${imageId}#${i}`)
         };
 
         const viewport = cornerstone.getDefaultViewportForImage(element, image);
@@ -155,54 +205,44 @@
           cornerstoneTools.addToolState(element, 'stack', stack);
           cornerstoneTools.mouseInput.enable(element);
           cornerstoneTools.mouseWheelInput.enable(element);
-          cornerstoneTools.wwwc.activate(element, 1); // ww/wc is the default tool for left mouse button
-          cornerstoneTools.pan.activate(element, 2); // pan is the default tool for middle mouse button
-          cornerstoneTools.zoom.activate(element, 4); // zoom is the default tool for right mouse button
+          cornerstoneTools.wwwc.activate(element, 1);
+          cornerstoneTools.pan.activate(element, 2);
+          cornerstoneTools.zoom.activate(element, 4);
           cornerstoneTools.stackScrollWheel.activate(element);
           cornerstoneTools.orientationMarkers.enable(element);
           loaded = true;
         }
 
-        // function getPixelRepresentation() {
-        //     const value = image.data.uint16('x00280103');
-        //     if(value === undefined) {
-        //         return;
-        //     }
-        //     return value + (value === 0 ? ' (unsigned)' : ' (signed)');
-        // }
-        //
-        // function getPlanarConfiguration() {
-        //     const value = image.data.uint16('x00280006');
-        //     if(value === undefined) {
-        //         return;
-        //     }
-        //     return value + (value === 0 ? ' (pixel)' : ' (plane)');
-        // }
+        function getPixelRepresentation(value) {
+          return value === '0000H' ? '(unsigned)' : '(signed)';
+        }
 
-        // document.getElementById('samplesPerPixel').textContent = image.data.uint16('x00280002');
-        // document.getElementById('photometricInterpretation').textContent = image.data.string('x00280004');
-        // document.getElementById('numberOfFrames').textContent = image.data.string('x00280008');
-        // document.getElementById('planarConfiguration').textContent = getPlanarConfiguration();
-        // document.getElementById('rows').textContent = image.data.uint16('x00280010');
-        // document.getElementById('columns').textContent = image.data.uint16('x00280011');
-        // document.getElementById('pixelSpacing').textContent = image.data.string('x00280030');
-        // document.getElementById('bitsAllocated').textContent = image.data.uint16('x00280100');
-        // document.getElementById('bitsStored').textContent = image.data.uint16('x00280101');
-        // document.getElementById('highBit').textContent = image.data.uint16('x00280102');
-        // document.getElementById('pixelRepresentation').textContent = getPixelRepresentation();
-        // document.getElementById('windowCenter').textContent = image.data.string('x00281050');
-        // document.getElementById('windowWidth').textContent = image.data.string('x00281051');
-        // document.getElementById('rescaleIntercept').textContent = image.data.string('x00281052');
-        // document.getElementById('rescaleSlope').textContent = image.data.string('x00281053');
-        // document.getElementById('basicOffsetTable').textContent = image.data.elements.x7fe00010.basicOffsetTable ? image.data.elements.x7fe00010.basicOffsetTable.length : '';
-        // document.getElementById('fragments').textContent = image.data.elements.x7fe00010.fragments ? image.data.elements.x7fe00010.fragments.length : '';
-        // document.getElementById('minStoredPixelValue').textContent = image.minPixelValue;
-        // document.getElementById('maxStoredPixelValue').textContent = image.maxPixelValue;
-        // const end = new Date().getTime();
-        // const time = end - start;
-        // document.getElementById('totalTime').textContent = `${time}ms`;
-        // document.getElementById('loadTime').textContent = `${image.loadTimeInMS}ms`;
-        // document.getElementById('decodeTime').textContent = `${image.decodeTimeInMS}ms`;
+        function getPlanarConfiguration(value) {
+            return (typeof value === 'undefined' ? 'unspecified' : (value === 0 ? '(pixel)' : '(plane)'));
+        }
+
+        const metaData = (type) => cornerstone.metaData.get(type, imageId);
+
+        document.getElementById('samplesPerPixel').textContent = metaData('imagePixelModule').samplesPerPixel;
+        document.getElementById('photometricInterpretation').textContent = metaData('imagePixelModule').photometricInterpretation;
+        document.getElementById('numberOfFrames').textContent = metaData('multiFrameModule').numberOfFrames;
+        document.getElementById('planarConfiguration').textContent = getPlanarConfiguration(metaData('imagePixelModule').planarConfiguration);
+        document.getElementById('rows').textContent = metaData('imagePixelModule').rows;
+        document.getElementById('columns').textContent = metaData('imagePixelModule').columns;
+        document.getElementById('pixelAspectRatio').textContent = metaData('imagePixelModule').pixelAspectRatio;
+        document.getElementById('bitsAllocated').textContent = metaData('imagePixelModule').bitsAllocated;
+        document.getElementById('bitsStored').textContent = metaData('imagePixelModule').bitsStored;
+        document.getElementById('highBit').textContent = metaData('imagePixelModule').highBit;
+        document.getElementById('pixelRepresentation').textContent = getPixelRepresentation(metaData('imagePixelModule').pixelRepresentation);
+        document.getElementById('windowCenter').textContent = metaData('voiLutModule').windowCenter;
+        document.getElementById('windowWidth').textContent = metaData('voiLutModule').windowWidth;
+        document.getElementById('rescaleIntercept').textContent = metaData('modalityLutModule').rescaleIntercept;
+        document.getElementById('rescaleSlope').textContent = metaData('modalityLutModule').rescaleSlope;
+        document.getElementById('minStoredPixelValue').textContent = metaData('imagePixelModule').smallestPixelValue;
+        document.getElementById('maxStoredPixelValue').textContent = metaData('imagePixelModule').largestPixelValue;
+        const end = new Date().getTime();
+        const time = end - start;
+        document.getElementById('totalTime').textContent = `${time}ms`;
 
       }, function(err) {
         throw err;
@@ -267,7 +307,12 @@
   // });
 
   document.getElementById('toggle-more-info').addEventListener('click', function() {
-    document.querySelector('#more-info').classList.toggle('collapse');
+    const moreInfoEl = document.querySelector('#more-info');
+    let justAppeared = !moreInfoEl.classList.toggle('collapse');
+    if (justAppeared) {
+      moreInfoEl.classList.add('highlighted');
+      setTimeout(() => moreInfoEl.classList.remove('highlighted'), 100);
+    }
   });
 </script>
 </html>
