Puts viewports side by side on orientation-check.html example

--- a/examples/orientation-check.html
+++ b/examples/orientation-check.html
@@ -10,7 +10,7 @@
   <link href="orientation-check.css" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
+  <div class="container-fluid">
     <header id="main-header">
       <h1>NIFTI loading</h1>
       <h2><small class="text-muted">Example of displaying a NIFTI image using Cornerstone</small></h2>
@@ -289,7 +289,7 @@
 
   const elementX = document.getElementById('nifti-image-x');
   cornerstone.enable(elementX);
-  
+
   const elementY = document.getElementById('nifti-image-y');
   cornerstone.enable(elementY);
 
