--- a/examples/index.html
+++ b/examples/index.html
@@ -64,6 +64,8 @@
                 <input class="form-control" type="text" id="nifti-URL" placeholder="Enter URL to NIFTI file or pick from list" list="sample-nifti-files">
                 <datalist id="sample-nifti-files">
                   <option value="data/avg152T1_LR_nifti.nii">data/avg152T1_LR_nifti.nii (uncompressed, 903 KB)</option>
+                  <option value="data/avg152T1_RL_nifti.nii.gz">data/avg152T1_RL_nifti.nii.gz (compressed, 531 KB)</option>
+                  <option value="data/avg152T1_LR_nifti2.nii.gz">data/avg152T1_LR_nifti2.nii.gz (compressed, 764 KB)</option>
                   <option value="data/sample_image.nii.gz">data/sample_image.nii.gz (compressed, 1.5 MB)</option>
                   <option value="data/fMRI_Ret_bars.nii.gz">data/fMRI_Ret_bars.nii.gz (compressed, 3.0 MB)</option>
                   <option value="data/dti_FA.nii.gz">data/dti_FA.nii.gz (compressed, 395.6 KB)</option>
